Fix broken style

--- a/app/assets/stylesheets/_defaults.css.sass
+++ b/app/assets/stylesheets/_defaults.css.sass
@@ -281,7 +281,6 @@ label.collection_check_boxes
   +inline-block
   font-weight: normal
   margin: 0
-  width: 98%
 input[type=checkbox]
   +inline-block
 div.check_boxes span
